claude cooked- param fields